--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,22 +12,22 @@
 				<img alt="The Standard Ebooks logo." src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">Tarzan and the Jewels of Opar</i><br/>
-			was published in <em>year</em> by<br/>
+			was published in year by<br/>
 			<a href="https://en.wikipedia.org/wiki/Edgar_Rice_Burroughs">Edgar Rice Burroughs</a>.</p>
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="<em>producer</em>_<em>url</em>"><em>producer</em></a>,<br/>
+			<a href="producer_url">producer</a>,<br/>
 			and is based on a transcription produced in 1993 by<br/>
-			<b epub:type="z3998:personal-name"><em>transcriber</em>_1</b>, <b epub:type="z3998:personal-name"><em>transcriber</em>_2</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">transcriber_1</b>, <b epub:type="z3998:personal-name">transcriber_2</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/92">Project Gutenberg</a><br/>
 			and on digital scans from the<br/>
-			<a href="<em>ia</em>_<em>url</em>">Internet Archive</a>.</p>
+			<a href="ia_url">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting"><em>painting</em></i>,<br/>
-			a painting completed in <em>year</em> by<br/>
-			<a href="<em>cover</em>_<em>artist</em>_<em>wiki</em>_<em>url</em>"><em>cover</em>_<em>artist</em></a>.<br/>
+			<i epub:type="se:name.visual-art.painting">painting</i>,<br/>
+			a painting completed in year by<br/>
+			<a href="cover_artist_wiki_url">cover_artist</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
