--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,76 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/chapter-1.xhtml">Chapter <span epub:type="z3998:roman">I</span>: Belgian and Arab</a>
+				</li>
+				<li>
+					<a href="text/chapter-2.xhtml">Chapter <span epub:type="z3998:roman"><em>ii</em></span>: On the Road To Opar</a>
+				</li>
+				<li>
+					<a href="text/chapter-3.xhtml">Chapter <span epub:type="z3998:roman"><em>iii</em></span>: The Call of the Jungle</a>
+				</li>
+				<li>
+					<a href="text/chapter-4.xhtml">Chapter <span epub:type="z3998:roman"><em>iv</em></span>: Prophecy and Fulfillment</a>
+				</li>
+				<li>
+					<a href="text/chapter-5.xhtml">Chapter <span epub:type="z3998:roman">V</span>: The Altar of the Flaming God</a>
+				</li>
+				<li>
+					<a href="text/chapter-6.xhtml">Chapter <span epub:type="z3998:roman"><em>vi</em></span>: The Arab Raid</a>
+				</li>
+				<li>
+					<a href="text/chapter-7.xhtml">Chapter <span epub:type="z3998:roman"><em>vii</em></span>: The Jewel-Room of Opar</a>
+				</li>
+				<li>
+					<a href="text/chapter-8.xhtml">Chapter <span epub:type="z3998:roman"><em>viii</em></span>: The Escape from Opar</a>
+				</li>
+				<li>
+					<a href="text/chapter-9.xhtml">Chapter <span epub:type="z3998:roman"><em>ix</em></span>: The Theft of the Jewels</a>
+				</li>
+				<li>
+					<a href="text/chapter-10.xhtml">Chapter <span epub:type="z3998:roman">X</span>: Achmet Zek Sees the Jewels</a>
+				</li>
+				<li>
+					<a href="text/chapter-11.xhtml">Chapter <span epub:type="z3998:roman"><em>xi</em></span>: Tarzan Becomes a Beast Again</a>
+				</li>
+				<li>
+					<a href="text/chapter-12.xhtml">Chapter <span epub:type="z3998:roman"><em>xii</em></span>: La Seeks Vengeance</a>
+				</li>
+				<li>
+					<a href="text/chapter-13.xhtml">Chapter <span epub:type="z3998:roman"><em>xiii</em></span>: Condemned To Torture and Death</a>
+				</li>
+				<li>
+					<a href="text/chapter-14.xhtml">Chapter <span epub:type="z3998:roman"><em>xiv</em></span>: A Priestess But Yet a Woman</a>
+				</li>
+				<li>
+					<a href="text/chapter-15.xhtml">Chapter <span epub:type="z3998:roman"><em>xv</em></span>: The Flight of Werper</a>
+				</li>
+				<li>
+					<a href="text/chapter-16.xhtml">Chapter <span epub:type="z3998:roman"><em>xvi</em></span>: Tarzan Again Leads the Mangani</a>
+				</li>
+				<li>
+					<a href="text/chapter-17.xhtml">Chapter <span epub:type="z3998:roman"><em>xvii</em></span>: The Deadly Peril of Jane Clayton</a>
+				</li>
+				<li>
+					<a href="text/chapter-18.xhtml">Chapter <span epub:type="z3998:roman"><em>xviii</em></span>: The Fight For the Treasure</a>
+				</li>
+				<li>
+					<a href="text/chapter-19.xhtml">Chapter <span epub:type="z3998:roman"><em>xix</em></span>: Jane Clayton and the Beasts of the Jungle</a>
+				</li>
+				<li>
+					<a href="text/chapter-20.xhtml">Chapter <span epub:type="z3998:roman"><em>xx</em></span>: Jane Clayton Again a Prisoner</a>
+				</li>
+				<li>
+					<a href="text/chapter-21.xhtml">Chapter <span epub:type="z3998:roman"><em>xxi</em></span>: The Flight to the Jungle</a>
+				</li>
+				<li>
+					<a href="text/chapter-22.xhtml">Chapter <span epub:type="z3998:roman"><em>xxii</em></span>: Tarzan Recovers His Reason</a>
+				</li>
+				<li>
+					<a href="text/chapter-23.xhtml">Chapter <span epub:type="z3998:roman"><em>xxiii</em></span>: A Night of Terror</a>
+				</li>
+				<li>
+					<a href="text/chapter-24.xhtml">Chapter <span epub:type="z3998:roman"><em>xxiv</em></span>: Home</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -28,19 +97,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
-				</li>
-				<li>
-					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
-				</li>
-				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
-				</li>
-				<li>
-					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
-				</li>
-				<li>
-					<a href="text/uncopyright.xhtml" epub:type="backmatter copyright-page">Uncopyright</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter">Tarzan and the Jewels of Opar</a>
 				</li>
 			</ol>
 		</nav>
