Fix title capitalization and spaces after punctuation

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -17,73 +17,73 @@
 					<a href="text/chapter-1.xhtml">Chapter <span epub:type="z3998:roman">I</span>: Belgian and Arab</a>
 				</li>
 				<li>
-					<a href="text/chapter-2.xhtml">Chapter <span epub:type="z3998:roman"><em>ii</em></span>: On the Road To Opar</a>
+					<a href="text/chapter-2.xhtml">Chapter <span epub:type="z3998:roman">II</span>: On the Road to Opar</a>
 				</li>
 				<li>
-					<a href="text/chapter-3.xhtml">Chapter <span epub:type="z3998:roman"><em>iii</em></span>: The Call of the Jungle</a>
+					<a href="text/chapter-3.xhtml">Chapter <span epub:type="z3998:roman">III</span>: The Call of the Jungle</a>
 				</li>
 				<li>
-					<a href="text/chapter-4.xhtml">Chapter <span epub:type="z3998:roman"><em>iv</em></span>: Prophecy and Fulfillment</a>
+					<a href="text/chapter-4.xhtml">Chapter <span epub:type="z3998:roman">IV</span>: Prophecy and Fulfillment</a>
 				</li>
 				<li>
 					<a href="text/chapter-5.xhtml">Chapter <span epub:type="z3998:roman">V</span>: The Altar of the Flaming God</a>
 				</li>
 				<li>
-					<a href="text/chapter-6.xhtml">Chapter <span epub:type="z3998:roman"><em>vi</em></span>: The Arab Raid</a>
+					<a href="text/chapter-6.xhtml">Chapter <span epub:type="z3998:roman">VI</span>: The Arab Raid</a>
 				</li>
 				<li>
-					<a href="text/chapter-7.xhtml">Chapter <span epub:type="z3998:roman"><em>vii</em></span>: The Jewel-Room of Opar</a>
+					<a href="text/chapter-7.xhtml">Chapter <span epub:type="z3998:roman">VII</span>: The Jewel-Room of Opar</a>
 				</li>
 				<li>
-					<a href="text/chapter-8.xhtml">Chapter <span epub:type="z3998:roman"><em>viii</em></span>: The Escape from Opar</a>
+					<a href="text/chapter-8.xhtml">Chapter <span epub:type="z3998:roman">VIII</span>: The Escape from Opar</a>
 				</li>
 				<li>
-					<a href="text/chapter-9.xhtml">Chapter <span epub:type="z3998:roman"><em>ix</em></span>: The Theft of the Jewels</a>
+					<a href="text/chapter-9.xhtml">Chapter <span epub:type="z3998:roman">IX</span>: The Theft of the Jewels</a>
 				</li>
 				<li>
 					<a href="text/chapter-10.xhtml">Chapter <span epub:type="z3998:roman">X</span>: Achmet Zek Sees the Jewels</a>
 				</li>
 				<li>
-					<a href="text/chapter-11.xhtml">Chapter <span epub:type="z3998:roman"><em>xi</em></span>: Tarzan Becomes a Beast Again</a>
+					<a href="text/chapter-11.xhtml">Chapter <span epub:type="z3998:roman">XI</span>: Tarzan Becomes a Beast Again</a>
 				</li>
 				<li>
-					<a href="text/chapter-12.xhtml">Chapter <span epub:type="z3998:roman"><em>xii</em></span>: La Seeks Vengeance</a>
+					<a href="text/chapter-12.xhtml">Chapter <span epub:type="z3998:roman">XII</span>: La Seeks Vengeance</a>
 				</li>
 				<li>
-					<a href="text/chapter-13.xhtml">Chapter <span epub:type="z3998:roman"><em>xiii</em></span>: Condemned To Torture and Death</a>
+					<a href="text/chapter-13.xhtml">Chapter <span epub:type="z3998:roman">XIII</span>: Condemned to Torture and Death</a>
 				</li>
 				<li>
-					<a href="text/chapter-14.xhtml">Chapter <span epub:type="z3998:roman"><em>xiv</em></span>: A Priestess But Yet a Woman</a>
+					<a href="text/chapter-14.xhtml">Chapter <span epub:type="z3998:roman">XIV</span>: A Priestess but Yet a Woman</a>
 				</li>
 				<li>
-					<a href="text/chapter-15.xhtml">Chapter <span epub:type="z3998:roman"><em>xv</em></span>: The Flight of Werper</a>
+					<a href="text/chapter-15.xhtml">Chapter <span epub:type="z3998:roman">XV</span>: The Flight of Werper</a>
 				</li>
 				<li>
-					<a href="text/chapter-16.xhtml">Chapter <span epub:type="z3998:roman"><em>xvi</em></span>: Tarzan Again Leads the Mangani</a>
+					<a href="text/chapter-16.xhtml">Chapter <span epub:type="z3998:roman">XVI</span>: Tarzan Again Leads the Mangani</a>
 				</li>
 				<li>
-					<a href="text/chapter-17.xhtml">Chapter <span epub:type="z3998:roman"><em>xvii</em></span>: The Deadly Peril of Jane Clayton</a>
+					<a href="text/chapter-17.xhtml">Chapter <span epub:type="z3998:roman">XVII</span>: The Deadly Peril of Jane Clayton</a>
 				</li>
 				<li>
-					<a href="text/chapter-18.xhtml">Chapter <span epub:type="z3998:roman"><em>xviii</em></span>: The Fight For the Treasure</a>
+					<a href="text/chapter-18.xhtml">Chapter <span epub:type="z3998:roman">XVIII</span>: The Fight for the Treasure</a>
 				</li>
 				<li>
-					<a href="text/chapter-19.xhtml">Chapter <span epub:type="z3998:roman"><em>xix</em></span>: Jane Clayton and the Beasts of the Jungle</a>
+					<a href="text/chapter-19.xhtml">Chapter <span epub:type="z3998:roman">XIX</span>: Jane Clayton and the Beasts of the Jungle</a>
 				</li>
 				<li>
-					<a href="text/chapter-20.xhtml">Chapter <span epub:type="z3998:roman"><em>xx</em></span>: Jane Clayton Again a Prisoner</a>
+					<a href="text/chapter-20.xhtml">Chapter <span epub:type="z3998:roman">XX</span>: Jane Clayton Again a Prisoner</a>
 				</li>
 				<li>
-					<a href="text/chapter-21.xhtml">Chapter <span epub:type="z3998:roman"><em>xxi</em></span>: The Flight to the Jungle</a>
+					<a href="text/chapter-21.xhtml">Chapter <span epub:type="z3998:roman">XXI</span>: The Flight to the Jungle</a>
 				</li>
 				<li>
-					<a href="text/chapter-22.xhtml">Chapter <span epub:type="z3998:roman"><em>xxii</em></span>: Tarzan Recovers His Reason</a>
+					<a href="text/chapter-22.xhtml">Chapter <span epub:type="z3998:roman">XXII</span>: Tarzan Recovers His Reason</a>
 				</li>
 				<li>
-					<a href="text/chapter-23.xhtml">Chapter <span epub:type="z3998:roman"><em>xxiii</em></span>: A Night of Terror</a>
+					<a href="text/chapter-23.xhtml">Chapter <span epub:type="z3998:roman">XXIII</span>: A Night of Terror</a>
 				</li>
 				<li>
-					<a href="text/chapter-24.xhtml">Chapter <span epub:type="z3998:roman"><em>xxiv</em></span>: Home</a>
+					<a href="text/chapter-24.xhtml">Chapter <span epub:type="z3998:roman">XXIV</span>: Home</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
