--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -17,17 +17,17 @@
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="producer_url">producer</a>, <br/>
+			<b epub:type="z3998:personal-name">Hendrik Kaiber</b>, <br/>
 			and is based on a transcription produced in 1993 by<br/>
-			<b epub:type="z3998:personal-name">transcriber_1</b>, <b epub:type="z3998:personal-name">transcriber_2</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">Judith Boss</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/92">Project Gutenberg</a><br/>
 			and on digital scans from the<br/>
-			<a href="ia_url">Internet Archive</a>.</p>
+			<a href="https://archive.org/details/tarzanjewelsofop00burruoft">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">painting</i>, <br/>
+			<i epub:type="se:name.visual-art.painting">Tarzan and the Jewels of Opar</i>, <br/>
 			a painting completed in year by<br/>
-			<a href="cover_artist_wiki_url">cover_artist</a>.<br/>
+			<a href="https://en.wikipedia.org/wiki/J._Allen_St._John">J. Allen St. John</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
