--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,7 +12,7 @@
 				<img alt="The Standard Ebooks logo." src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">Tarzan and the Jewels of Opar</i><br/>
-			was published in year by<br/>
+			was published in 1916 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Edgar_Rice_Burroughs">Edgar Rice Burroughs</a>.</p>
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
@@ -27,7 +27,7 @@
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Tarzan and the Jewels of Opar</i>,<br/>
 			a painting completed in year by<br/>
-			<a href="https://en.wikipedia.org/wiki/J._Allen_St._John">J. Allen St. John</a>.<br/>
+			<a href="https://en.wikipedia.org/wiki/J._Allen_St._John"><abbr epub:type="z3998:given-name">J.</abbr> Allen <abbr epub:type="z3998:given-name">St.</abbr> John</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
