--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,76 +14,76 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml">Chapter <span epub:type="z3998:roman">I</span>: Belgian and Arab</a>
+					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Belgian and Arab</a>
 				</li>
 				<li>
-					<a href="text/chapter-2.xhtml">Chapter <span epub:type="z3998:roman">II</span>: On the Road to Opar</a>
+					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: On the Road to Opar</a>
 				</li>
 				<li>
-					<a href="text/chapter-3.xhtml">Chapter <span epub:type="z3998:roman">III</span>: The Call of the Jungle</a>
+					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: The Call of the Jungle</a>
 				</li>
 				<li>
-					<a href="text/chapter-4.xhtml">Chapter <span epub:type="z3998:roman">IV</span>: Prophecy and Fulfillment</a>
+					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: Prophecy and Fulfillment</a>
 				</li>
 				<li>
-					<a href="text/chapter-5.xhtml">Chapter <span epub:type="z3998:roman">V</span>: The Altar of the Flaming God</a>
+					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: The Altar of the Flaming God</a>
 				</li>
 				<li>
-					<a href="text/chapter-6.xhtml">Chapter <span epub:type="z3998:roman">VI</span>: The Arab Raid</a>
+					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: The Arab Raid</a>
 				</li>
 				<li>
-					<a href="text/chapter-7.xhtml">Chapter <span epub:type="z3998:roman">VII</span>: The Jewel-Room of Opar</a>
+					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: The Jewel-Room of Opar</a>
 				</li>
 				<li>
-					<a href="text/chapter-8.xhtml">Chapter <span epub:type="z3998:roman">VIII</span>: The Escape from Opar</a>
+					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: The Escape from Opar</a>
 				</li>
 				<li>
-					<a href="text/chapter-9.xhtml">Chapter <span epub:type="z3998:roman">IX</span>: The Theft of the Jewels</a>
+					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: The Theft of the Jewels</a>
 				</li>
 				<li>
-					<a href="text/chapter-10.xhtml">Chapter <span epub:type="z3998:roman">X</span>: Achmet Zek Sees the Jewels</a>
+					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Achmet Zek Sees the Jewels</a>
 				</li>
 				<li>
-					<a href="text/chapter-11.xhtml">Chapter <span epub:type="z3998:roman">XI</span>: Tarzan Becomes a Beast Again</a>
+					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Tarzan Becomes a Beast Again</a>
 				</li>
 				<li>
-					<a href="text/chapter-12.xhtml">Chapter <span epub:type="z3998:roman">XII</span>: La Seeks Vengeance</a>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: La Seeks Vengeance</a>
 				</li>
 				<li>
-					<a href="text/chapter-13.xhtml">Chapter <span epub:type="z3998:roman">XIII</span>: Condemned to Torture and Death</a>
+					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Condemned to Torture and Death</a>
 				</li>
 				<li>
-					<a href="text/chapter-14.xhtml">Chapter <span epub:type="z3998:roman">XIV</span>: A Priestess but Yet a Woman</a>
+					<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: A Priestess but Yet a Woman</a>
 				</li>
 				<li>
-					<a href="text/chapter-15.xhtml">Chapter <span epub:type="z3998:roman">XV</span>: The Flight of Werper</a>
+					<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: The Flight of Werper</a>
 				</li>
 				<li>
-					<a href="text/chapter-16.xhtml">Chapter <span epub:type="z3998:roman">XVI</span>: Tarzan Again Leads the Mangani</a>
+					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: Tarzan Again Leads the Mangani</a>
 				</li>
 				<li>
-					<a href="text/chapter-17.xhtml">Chapter <span epub:type="z3998:roman">XVII</span>: The Deadly Peril of Jane Clayton</a>
+					<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: The Deadly Peril of Jane Clayton</a>
 				</li>
 				<li>
-					<a href="text/chapter-18.xhtml">Chapter <span epub:type="z3998:roman">XVIII</span>: The Fight for the Treasure</a>
+					<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: The Fight for the Treasure</a>
 				</li>
 				<li>
-					<a href="text/chapter-19.xhtml">Chapter <span epub:type="z3998:roman">XIX</span>: Jane Clayton and the Beasts of the Jungle</a>
+					<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: Jane Clayton and the Beasts of the Jungle</a>
 				</li>
 				<li>
-					<a href="text/chapter-20.xhtml">Chapter <span epub:type="z3998:roman">XX</span>: Jane Clayton Again a Prisoner</a>
+					<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Jane Clayton Again a Prisoner</a>
 				</li>
 				<li>
-					<a href="text/chapter-21.xhtml">Chapter <span epub:type="z3998:roman">XXI</span>: The Flight to the Jungle</a>
+					<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: The Flight to the Jungle</a>
 				</li>
 				<li>
-					<a href="text/chapter-22.xhtml">Chapter <span epub:type="z3998:roman">XXII</span>: Tarzan Recovers His Reason</a>
+					<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: Tarzan Recovers His Reason</a>
 				</li>
 				<li>
-					<a href="text/chapter-23.xhtml">Chapter <span epub:type="z3998:roman">XXIII</span>: A Night of Terror</a>
+					<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: A Night of Terror</a>
 				</li>
 				<li>
-					<a href="text/chapter-24.xhtml">Chapter <span epub:type="z3998:roman">XXIV</span>: Home</a>
+					<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: Home</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
