--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -26,7 +26,7 @@
 			<a href="https://archive.org/details/tarzanjewelsofop00burruoft">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Tarzan and the Jewels of Opar</i>,<br/>
-			a painting completed in year by<br/>
+			a painting completed in 1918 by<br/>
 			<a href="https://en.wikipedia.org/wiki/J._Allen_St._John"><abbr epub:type="z3998:given-name">J.</abbr> Allen <abbr epub:type="z3998:given-name">St.</abbr> John</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
